--- a/android/app/src/main/res/layout/fragment_stadium_stats.xml
+++ b/android/app/src/main/res/layout/fragment_stadium_stats.xml
@@ -51,181 +51,156 @@
                 app:layout_constraintTop_toTopOf="@id/tv_stadium_chart_title"
                 tools:text="14:30 기준" />
 
-            <com.github.mikephil.charting.charts.PieChart
-                android:id="@+id/pie_chart"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:layout_centerInParent="true"
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="52dp"
                 android:layout_marginTop="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_stadium_chart_title" />
+                app:layout_constraintTop_toBottomOf="@id/tv_stadium_chart_title">
 
-            <TextView
-                android:id="@+id/tv_winning_percentage"
-                style="@style/TextView.Pretendard.Bold.40"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:includeFontPadding="false"
-                android:text="@{@string/stats_percentage(stadiumStatsUiModel.firstTeamStatus.roundedPercentage)}"
-                android:textColor="@{context.getColor(stadiumStatsUiModel.firstTeamStatus.teamColor)}"
-                app:layout_constraintBottom_toTopOf="@id/tv_team_name"
-                app:layout_constraintEnd_toEndOf="@id/pie_chart"
-                app:layout_constraintStart_toStartOf="@id/pie_chart"
-                app:layout_constraintTop_toTopOf="@id/pie_chart"
-                app:layout_constraintVertical_chainStyle="packed"
-                tools:text="58.5%" />
+                <View
+                    android:id="@+id/left_rect"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/bg_left_radius_14dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:setConstraintWidthPercent="@{stadiumStatsUiModel.firstTeamBias}"
+                    app:setCustomChartBackgroundTint="@{stadiumStatsUiModel.firstTeamStatus.teamColor}"
+                    tools:backgroundTint="@color/team_kia"
+                    tools:layout_constraintWidth_percent="0.3" />
 
-            <TextView
-                android:id="@+id/tv_team_name"
-                style="@style/TextView.Pretendard.Medium.16"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:includeFontPadding="false"
-                android:text="@{stadiumStatsUiModel.firstTeamStatus.teamName}"
-                android:textColor="@color/gray500"
-                app:layout_constraintBottom_toBottomOf="@id/pie_chart"
-                app:layout_constraintEnd_toEndOf="@id/pie_chart"
-                app:layout_constraintStart_toStartOf="@id/pie_chart"
-                app:layout_constraintTop_toBottomOf="@id/tv_winning_percentage"
-                tools:text="KIA" />
+                <View
+                    android:id="@+id/right_rect"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/bg_right_radius_14dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:setConstraintWidthPercent="@{stadiumStatsUiModel.secondTeamBias}"
+                    app:setCustomChartBackgroundTint="@{stadiumStatsUiModel.secondTeamStatus.teamColor}"
+                    tools:backgroundTint="@color/team_kiwoom"
+                    tools:layout_constraintWidth_percent="0.7" />
 
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:id="@+id/layout_legend"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:baselineAligned="false"
-                android:gravity="center"
-                android:orientation="horizontal"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/pie_chart">
-
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:id="@+id/linear_legend_first"
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/guideline_split"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/bg_gray050_radius_8dp"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:paddingHorizontal="10dp"
-                    android:paddingVertical="6dp"
-                    android:visibility="@{stadiumStatsUiModel.showFirstLegend ? View.VISIBLE : View.GONE}">
+                    android:orientation="vertical"
+                    app:setConstraintGuidePercent="@{stadiumStatsUiModel.firstTeamBias}"
+                    tools:layout_constraintGuide_percent="0.3" />
 
-                    <View
-                        android:id="@+id/icon_first_legend"
-                        android:layout_width="16dp"
-                        android:layout_height="16dp"
-                        android:background="@drawable/bg_radius_4dp"
-                        app:legendBackgroundTint="@{stadiumStatsUiModel.firstTeamStatus.teamColor}"
-                        tools:backgroundTint="@color/team_kia" />
+                <ImageView
+                    android:id="@+id/triangle_left"
+                    android:layout_width="15dp"
+                    android:layout_height="match_parent"
+                    android:elevation="4dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/chart_divider_triangle_left"
+                    android:translationX="-2dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@id/guideline_split"
+                    app:layout_constraintStart_toStartOf="@id/guideline_split"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:setCustomChartDividerTint="@{stadiumStatsUiModel.firstTeamStatus.teamColor}"
+                    tools:tint="@color/team_kia" />
 
-                    <TextView
-                        android:id="@+id/tv_first_team_name"
-                        style="@style/TextView.Pretendard.Medium"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="6dp"
-                        android:text="@{stadiumStatsUiModel.firstTeamStatus.teamName}"
-                        android:textSize="14sp"
-                        tools:text="KIA" />
+                <ImageView
+                    android:id="@+id/triangle_right"
+                    android:layout_width="15dp"
+                    android:layout_height="match_parent"
+                    android:elevation="4dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/chart_divider_triangle_right"
+                    android:translationX="2dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@id/guideline_split"
+                    app:layout_constraintStart_toStartOf="@id/guideline_split"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:setCustomChartDividerTint="@{stadiumStatsUiModel.secondTeamStatus.teamColor}"
+                    tools:tint="@color/team_kiwoom" />
 
-                    <TextView
-                        android:id="@+id/tv_first_rate"
-                        style="@style/TextView.Pretendard.Regular"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="4dp"
-                        android:text="@{@string/stats_legend_percentage(stadiumStatsUiModel.firstTeamStatus.percentage)}"
-                        android:textColor="@color/gray500"
-                        android:textSize="14sp"
-                        tools:text="75%" />
-                </androidx.appcompat.widget.LinearLayoutCompat>
-
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:id="@+id/linear_legend_second"
+                <TextView
+                    android:id="@+id/tv_vs"
+                    style="@style/TextView.Pretendard.Bold.20"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:background="@drawable/bg_gray050_radius_8dp"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:paddingHorizontal="10dp"
-                    android:paddingVertical="6dp"
-                    android:visibility="@{stadiumStatsUiModel.showSecondLegend ? View.VISIBLE : View.GONE}">
+                    android:elevation="8dp"
+                    android:letterSpacing="-0.1"
+                    android:text="VS"
+                    android:textColor="@android:color/white"
+                    android:translationX="-0.5dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@id/guideline_split"
+                    app:layout_constraintStart_toStartOf="@id/guideline_split"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                    <View
-                        android:id="@+id/icon_second_legend"
-                        android:layout_width="16dp"
-                        android:layout_height="16dp"
-                        android:background="@drawable/bg_radius_4dp"
-                        app:legendBackgroundTint="@{stadiumStatsUiModel.secondTeamStatus.teamColor}"
-                        tools:backgroundTint="@color/team_samsung" />
-
-                    <TextView
-                        android:id="@+id/tv_second_team_name"
-                        style="@style/TextView.Pretendard.Medium"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="6dp"
-                        android:text="@{stadiumStatsUiModel.secondTeamStatus.teamName}"
-                        android:textSize="14sp"
-                        tools:text="삼성" />
-
-                    <TextView
-                        android:id="@+id/tv_second_rate"
-                        style="@style/TextView.Pretendard.Regular"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="4dp"
-                        android:text="@{@string/stats_legend_percentage(stadiumStatsUiModel.secondTeamStatus.percentage)}"
-                        android:textColor="@color/gray500"
-                        android:textSize="14sp"
-                        tools:text="20%" />
-                </androidx.appcompat.widget.LinearLayoutCompat>
-
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:id="@+id/linear_legend_third"
+                <TextView
+                    android:id="@+id/tv_first_team_name"
+                    style="@style/TextView.Pretendard.Bold.20"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:background="@drawable/bg_gray050_radius_8dp"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:paddingHorizontal="10dp"
-                    android:paddingVertical="6dp"
-                    android:visibility="@{stadiumStatsUiModel.showThirdLegend ? View.VISIBLE : View.GONE}">
+                    android:layout_marginStart="6dp"
+                    android:elevation="8dp"
+                    android:includeFontPadding="false"
+                    android:textColor="@android:color/white"
+                    android:text="@{stadiumStatsUiModel.firstTeamStatus.teamName}"
+                    app:layout_constraintBottom_toTopOf="@id/tv_first_team_percent"
+                    app:layout_constraintEnd_toStartOf="@+id/guideline_split"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_chainStyle="packed"
+                    tools:text="KIA" />
 
-                    <View
-                        android:id="@+id/icon_third_legend"
-                        android:layout_width="16dp"
-                        android:layout_height="16dp"
-                        android:background="@drawable/bg_radius_4dp"
-                        app:legendBackgroundTint="@{stadiumStatsUiModel.thirdTeamStatus.teamColor}"
-                        tools:backgroundTint="@color/gray400" />
+                <TextView
+                    android:id="@+id/tv_first_team_percent"
+                    style="@style/TextView.Pretendard.SemiBold.12"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:elevation="8dp"
+                    android:includeFontPadding="false"
+                    android:textColor="@android:color/white"
+                    android:text="@{@string/stats_chart_percentage(stadiumStatsUiModel.firstTeamStatus.percentage)}"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/tv_first_team_name"
+                    app:layout_constraintStart_toStartOf="@+id/tv_first_team_name"
+                    app:layout_constraintTop_toBottomOf="@id/tv_first_team_name"
+                    tools:text="16%" />
 
-                    <TextView
-                        android:id="@+id/tv_third_team_name"
-                        style="@style/TextView.Pretendard.Medium"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="6dp"
-                        android:text="@{stadiumStatsUiModel.thirdTeamStatus.teamName}"
-                        android:textSize="14sp"
-                        tools:text="기타" />
 
-                    <TextView
-                        android:id="@+id/tv_third_rate"
-                        style="@style/TextView.Pretendard.Regular"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="4dp"
-                        android:text="@{@string/stats_legend_percentage(stadiumStatsUiModel.thirdTeamStatus.percentage)}"
-                        android:textColor="@color/gray500"
-                        android:textSize="14sp"
-                        tools:text="5%" />
-                </androidx.appcompat.widget.LinearLayoutCompat>
-            </androidx.appcompat.widget.LinearLayoutCompat>
+                <TextView
+                    android:id="@+id/tv_second_team_name"
+                    style="@style/TextView.Pretendard.Bold.20"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="6dp"
+                    android:elevation="8dp"
+                    android:includeFontPadding="false"
+                    android:text="@{stadiumStatsUiModel.secondTeamStatus.teamName}"
+                    android:textColor="@android:color/white"
+                    app:layout_constraintBottom_toTopOf="@id/tv_second_team_percent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/guideline_split"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_chainStyle="packed"
+                    tools:text="키움" />
+
+                <TextView
+                    android:id="@+id/tv_second_team_percent"
+                    style="@style/TextView.Pretendard.SemiBold.12"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:elevation="8dp"
+                    android:includeFontPadding="false"
+                    android:textColor="@android:color/white"
+                    android:text="@{@string/stats_chart_percentage(stadiumStatsUiModel.secondTeamStatus.percentage)}"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/tv_second_team_name"
+                    app:layout_constraintStart_toStartOf="@+id/tv_second_team_name"
+                    app:layout_constraintTop_toBottomOf="@id/tv_second_team_name"
+                    tools:text="16%" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
