--- a/android/app/src/main/res/layout/item_setting_menu.xml
+++ b/android/app/src/main/res/layout/item_setting_menu.xml
@@ -5,6 +5,9 @@
 
     <data>
 
+        <variable
+            name="menuTitle"
+            type="String" />
 
     </data>
 
@@ -21,6 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:includeFontPadding="false"
+            android:text="@{menuTitle}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
