--- a/android/app/src/main/res/layout/fragment_livetalk.xml
+++ b/android/app/src/main/res/layout/fragment_livetalk.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,6 +17,35 @@
             android:paddingBottom="12dp"
             tools:itemCount="5"
             tools:listitem="@layout/item_livetalk_stadium" />
+
+        <ImageView
+            android:id="@+id/iv_empty_game"
+            android:layout_width="wrap_content"
+            android:layout_height="250dp"
+            android:contentDescription="@string/livetalk_empty_game_illustration_description"
+            android:src="@drawable/img_baseball_fly_error"
+            app:layout_constraintBottom_toTopOf="@id/tv_empty_game"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed" />
+
+        <TextView
+            android:id="@+id/tv_empty_game"
+            style="@style/TextView.Pretendard.Medium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:lineSpacingExtra="8dp"
+            android:text="@string/livetalk_empty_game_description"
+            android:textColor="@color/gray400"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_empty_game"
+            app:layout_constraintVertical_chainStyle="packed" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
